--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
  :root{
     --color-dark-blue: #082bcb;
-    --color-light-blue: #2599FB;
-    --color-blue: #AAD9F9;
+    --color-blue: #2599FB;
+    --color-light-blue: #AAD9F9;
     --color-yellow: #FEF503;
     --color-orange: #FEC606;
+ }
+
+ header {
+   background-color: var(--color-light-blue);
  }
 
  main {
@@ -34,7 +38,7 @@
 }
 
 h1 {
-   color: var(--color-orange);
+   color: black;
    font-size: 2rem;
    font-weight: bold;
    text-align: center;
@@ -54,6 +58,9 @@ article {
    width: 90%;
    justify-content: start;
    align-items: center;
+   background-color: lightgray;
+   border-radius: 10px;
+   box-shadow: 0px 0px 2px 2px lightgray;
 }
 
 .container-kanban-title {
