--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@
  .container-main-title, 
  .container-kanban-title, 
  .container-add-icone,
+ .container-section-and-title,
  section {
     width: 100%;
     display: flex;
@@ -48,7 +49,8 @@
    
    .container-main-title, 
    .container-kanban-title, 
-   .container-add-icone {
+   .container-add-icone,
+   .container-sections {
       justify-content: center;
       align-items: center;
    }
@@ -59,12 +61,19 @@
       font-weight: bold;
       text-align: center;
    }
+
+   .container-section-and-title {
+      flex-direction: column;
+      align-items: start;
+      justify-content: center;
+   }
    
    section {
       margin: 0 auto;
+      padding-top: 1rem;
       width: 100%;
       background-color: var(--color-light-blue);
-      max-height: 70vh;
+      height: 60vh;
       border-radius: 10px;
       overflow: scroll;
       flex-direction: column;
@@ -187,6 +196,14 @@
    @media screen and (min-width: 768px) {
       .container-sections {
          flex-direction: row;
+      }
+
+      .container-kanban-title{
+         width: 100%;
+      }
+
+      .container-section-and-title {
+         width: 30%;
       }
       
       section {
