--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
     width: 100%;
     margin: 0;
     padding: 0;
+    position: relative;
  }
 
  .container-sections {
@@ -151,8 +152,15 @@
       gap: 10px;
    }
    
-   .container-add-icone {
-      
+   .container-modificationOfaTask button {
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: 800;
+      color: white;
+      background-color: var(--color-orange);
+      border-radius: 10px;
+      padding: 0.5rem 2rem;
+      border: 1px solid white;
    }
    
    #add-icone {
@@ -188,6 +196,61 @@
       font-weight: 500;
       text-align: justify;
    }
+
+.container-popup-task {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.6);
+   display: flex;
+   justify-content: center;
+   align-items: start;
+   padding-top: 2rem;
+   }
+
+   .container-form {
+      width: 80%;
+      justify-content: center;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      background-color: white;
+      padding: 1rem 0;
+      border-radius: 10px;
+      box-shadow: 0px 0px 2px 2px lightgray;
+      padding-top: 1rem;
+      position: relative;
+   }
+
+   .container-form button {
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: 800;
+      color: white;
+      background-color: var(--color-orange);
+      border-radius: 10px;
+      padding: 0.5rem 2rem;
+      border: 1px solid white;
+   }
+
+   .container-form input, select {
+      width: 80%;
+      padding: 0.5rem;
+      border-radius: 10px;
+      border: 1px solid lightgray;
+      background-color: rgb(255, 242, 218);
+      margin-bottom: 1rem;
+   }
+
+   #close-popup-add-task {
+      cursor: pointer;
+      position: absolute;
+      right: 15px;
+      top: 10px;
+      font-size: 2rem;
+      font-weight: 800;
+      color: var(--color-orange);
+   }
    
    .hidden {
       display: none;
@@ -208,6 +271,10 @@
       
       section {
          width: 90%;
+      }
+
+      .container-form {
+         width: 40%;
       }
       
 }
