--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@
       height: 60vh;
       border-radius: 10px;
       overflow: scroll;
+      scrollbar-width: thin;
       flex-direction: column;
       align-items: center;
       justify-content: start;
