--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
  }
 
  header {
-   background-color: var(--color-light-blue);
+   background-color: var(--color-blue);
    box-shadow: 0px 0px 8px 2px grey;
  }
 
