--- a/style.css
+++ b/style.css
@@ -34,9 +34,65 @@
     position: relative;
  }
 
+ .container-categoryFilter {
+   position: absolute;
+   top: 90px;
+   right: 50%;
+   width: 90px;
+   transform: translateX(50%);
+   background-color: var(--color-blue);
+   display: flex;
+   justify-content: center;
+   gap: 10px;
+   cursor: pointer;
+   border: 1px solid white;
+   border-radius: 10px;
+   padding: 0rem 0.5rem;
+ }
+
+   .container-categoryFilter svg {
+      color: white;
+      width: 30px;
+   }
+
+   .container-categoryFilter p {
+      color: white;
+      font-size: 1rem;
+      font-weight: 800;
+   }
+
+   .container-filter-selection {
+      position: absolute;
+      top: 146px;
+      right: 50%;
+      transform: translateX(50%);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      width: 260px;
+      background-color: white;
+      border-radius: 15px;
+      padding: 1rem 0;
+      box-shadow: 0px 0px 2px 2px lightgray;
+      z-index: 10;
+   }
+
+   #filter-submitButton {
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: 800;
+      color: white;
+      background-color: var(--color-orange);
+      border-radius: 10px;
+      padding: 0.5rem 2rem;
+      border: 1px solid white;
+   }
+
  .container-sections {
    flex-direction: column;
-   margin: 0 auto;
+   margin-top: 3rem;
    display: flex;
    gap: 15px;
    width: 95%;
@@ -73,6 +129,7 @@
       flex-direction: column;
       align-items: start;
       justify-content: center;
+      margin-top: 3rem;
    }
    
    section {
@@ -313,6 +370,7 @@
       
       .container-section-and-title {
          width: 30%;
+         margin-top: 0;
       }
       
       section {
@@ -326,7 +384,25 @@
       .container-modificationOfaTask button {
          padding: 0.5rem 0.5rem;
       }
-      
+
+      .container-categoryFilter {
+         position: absolute;
+         top: 12px;
+         right: 70px;
+         display: flex;
+         justify-content: center;
+         gap: 10px;
+         cursor: pointer;
+         border: 1px solid white;
+         border-radius: 10px;
+         padding: 0rem 0.5rem;
+       }
+
+       .container-filter-selection {
+         top: 70px;
+         right: 165px;
+         width: 300px;
+       }
 }
 
 
